--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
       </section>
 
       <!-- Introduction Section -->
-      <div>
-      <section class="intro-placement">
+      <div class="intro-placement">
         <img src="assets/images/computer.jpg" alt="stock-image" class="image-right"/>
         <p class="intro-left">
           A committed and motivated IT professional who has developed a high level of
@@ -57,7 +56,6 @@
           IT industry he has Proven ability to troubleshoot complex issues, optimize 
           performance and enhance system reliability.
         </p>
-      </section>
     </div>
 
        <!-- Education Section -->
