--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
           </ul>
         </div>
       </section>
+
             <!-- Employment Section -->
             <section id="employment" class="employment-placement">
               <h2 class="employment-title">Employment History</h2>
@@ -216,6 +217,7 @@
                 </div>
               </section>
       </main>
+
     <!--Footer-->
         <footer>
           <!-- Contact Section -->
@@ -231,6 +233,7 @@
               </ul>
             </div>
 
+            <!-- Contact form Section -->
             <div class="contact-form">
               <h4>Send a Message:</h4>
               <form action="response.html" method="GET">
