Add clear title for website

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <header>
     <!--Create navbar within the header conataining four links-->
     <nav class="navbar navbar-expand-lg">
-        <div>
+        <div> 
+          <h1 style="color: beige">Welcome To Femi Merit CV</h1>       
           <ul class="navbar-nav">
             <li><a class="nav-link" href="#home" aria-label="Navigate to Home section">Home</a></li>
             <li><a class="nav-link" href="#education" aria-label="Navigate to Education section">Education</a></li>
@@ -42,6 +43,7 @@
 
       <!-- Introduction Section -->
       <div class="intro-placement">
+        <h1 style="color: rgba(200, 200, 200, 0.5);">About Me</h1> 
         <img src="assets/images/computer.jpg" alt="stock-image" class="image-right"/>
         <p class="intro-left">
           A committed and motivated IT professional who has developed a high level of
@@ -62,13 +64,13 @@
        <section id="education" class="education-placement">
         <!--Create a div to contain the hyperlink image in relation to the education section-->
         <div>
+          <h1 style="color: rgba(200, 200, 200, 0.5); display: flex; justify-content: center;">Education</h1> 
           <a href="https://www.coventry.ac.uk/" target="_blank">
             <img src="assets/images/university-pic.jpeg" alt="university-image" class="image-left" />
           </a>
         </div>        
         <!--Use a div to contain the list of education subjects -->
         <div class="education-right">
-          <h2>Education</h2>
           <h3>Coventry University, Computer Engineer, 2012 - 2015</h3><br>
           <ul id="position1">
             <li>System Projects</li>
@@ -90,7 +92,7 @@
 
             <!-- Employment Section -->
             <section id="employment" class="employment-placement">
-              <h2 class="employment-title">Employment History</h2>
+              <h1 class="employment-title" style="color: rgba(200, 200, 200, 0.5); display: flex; justify-content: center;">Employment</h1> 
               <!--Use a div element to contain details of responsibitly working in each company -->
               <div class="employment-entry">
                 <!--Hyperlink image that will direct users to Capita website-->
@@ -224,10 +226,13 @@
           <section id="contact" class="contact-placement">
             <!--Use a div element to contain the list for the contact and a class element for the styling-->
             <div class="contact-left">
-              <h3>Contact:</h3>
+              <h1 style="color: rgba(200, 200, 200, 0.5); display: flex; justify-content: center;">Contact Me</h1> 
               <ul>
                 <li>
                   Email:<a href="mailto:merritfemi@gmail.com"> merritfemi@gmail.com</a>
+                </li>
+                <li>
+                  Linkedin:<a href="https://www.linkedin.com/in/femi-merit-549380120/"  target="_blank"> Linkedin</a>
                 </li>
                 <li>Mobile Phone: 07480198135</li>
               </ul>
